ci/develop/3_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tekoapp-frontend-web
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: dev-tekoapp.com.py
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-tekoapp-frontend-web
                port:
                  number: 10006
